--- a/SSHButton/SSHButton WatchKit App/Base.lproj/Interface.storyboard
+++ b/SSHButton/SSHButton WatchKit App/Base.lproj/Interface.storyboard
@@ -14,7 +14,11 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="SSHButton_WatchKit_App" customModuleProvider="target">
                     <items>
-                        <button width="1" height="199" alignment="left" title="Press to send command" id="XU5-p6-Xol"/>
+                        <button width="1" height="199" alignment="left" title="Press to send command" id="XU5-p6-Xol">
+                            <connections>
+                                <action selector="sendDatCommand" destination="AgC-eL-Hgc" id="000-FZ-Y4R"/>
+                            </connections>
+                        </button>
                     </items>
                 </controller>
             </objects>
